--- a/src/layouts/FooterLayout.astro
+++ b/src/layouts/FooterLayout.astro
@@ -1,8 +1,5 @@
 ---
+import Footer from "../components/layout/Footer.astro";
 ---
-<footer class="footer">
-  <div class="footer-inner">
-    <p class="footer-text" data-text="© Protocol Zero - Est. 2025"></p>
-  </div>
-</footer>
+<Footer />
 <script src="/scripts/footer-scramble.min.js" is:inline></script>
