--- a/src/pages/artists.astro
+++ b/src/pages/artists.astro
@@ -2,7 +2,7 @@
 import PageLayout from "../layouts/PageLayout.astro";
 import artists from "../data/artists.json";
 ---
-<PageLayout title="Artists" active="artists" stylesheets={["/styles/artists.css"]}>
+<PageLayout title="Artists" active="artists">
   <section class="artists-page">
     <h1>ARTISTS</h1>
     <div class="artists-grid">
